--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ let createItem = (sid, title, descr)=>{
     let urlCover = ATON.PATH_RESTAPI+"cover/"+sid;
     let url = ATON.BASE_URL+"/s/"+sid+"?";
     url += "tb=back,vr,qr";
-    //url += "&mk.freq=200"
+    url += "&mk.freq=200&mk.dur=600&mk.nav=vr";
 
     let coversizex = 300;
     let coversizey = 350;
@@ -80,10 +80,10 @@ let createItem = (sid, title, descr)=>{
 
 window.addEventListener("load", ()=>{
 
-    createItem("bfanini/20230929-57ii1i7ht", "Cozy house");
-    
     createItem("bfanini/20230220-4shod14w9", "The tale of two houses");
     createItem("bfanini/20230220-z7fos1q99", "The tale of the floating Village");
+    createItem("bfanini/20230929-57ii1i7ht", "Cozy house");
+
     createItem("bfanini/20230929-yj3hs9l24", "Why is Digital Heritage important?");
 
     createItem("vhlab/20230213-54lv20q4h", "The tomb");
