--- a/index.html
+++ b/index.html
@@ -84,9 +84,10 @@ window.addEventListener("load", ()=>{
     createItem("bfanini/20230220-z7fos1q99", "The tale of the floating Village");
     createItem("bfanini/20230929-57ii1i7ht", "Cozy house");
 
-    createItem("bfanini/20230929-yj3hs9l24", "Why is Digital Heritage important?");
-
+    createItem("bfanini/20231026-kjtgo0m0w", "Art AI Gallery");
     createItem("vhlab/20230213-54lv20q4h", "The tomb");
+    
+    createItem("bfanini/20230929-yj3hs9l24", "Why is Digital Heritage important?");
 });
 
 </script>
