--- a/index.html
+++ b/index.html
@@ -103,9 +103,11 @@ window.addEventListener("load", ()=>{
             <h1>/imagine</h1>
             <div class="introQR"><img src="qr-app.png"><br>Inquadra per l'esperienza</div>
             <div class="introText">
-            L’A.I. generativa può essere utilizzata per accelerare la creazione di contenuti per esperienze interattive o ambienti 3D artificiali che gli utenti possono esplorare direttamente con i comuni browser web. Queste esperienze possono coinvolgere modelli 3D, elementi audio-visivi e narrazioni interattive, integrando molteplici servizi A.I. In questi esperimenti, vengono combinati diversi servizi di A.I. generativa per creare contenuti visivi e uditivi, brevi narrazioni e favole; traduttori automatici e servizi text-to-speech per arricchire automaticamente scene 3D annotate semanticamente da professionisti per fruizioni XR.
+            L’A.I. generativa può essere utilizzata per accelerare la creazione di contenuti per esperienze interattive o ambienti 3D artificiali che gli utenti possono esplorare direttamente con i comuni browser web. Queste esperienze possono coinvolgere modelli 3D, elementi audio-visivi e narrazioni interattive, integrando molteplici servizi A.I. In questi esperimenti, vengono combinati diversi servizi di A.I. generativa per creare contenuti visivi e uditivi, brevi narrazioni e favole; traduttori automatici e servizi text-to-speech per arricchire automaticamente scene 3D annotate semanticamente da professionisti per fruizioni XR.<br>
+            <i>Si avvisano i gentili utenti che gli spostamenti nei vari ambienti virtuali verranno tracciati e analizzati per scopi di ricerca nell'ambito di un pilot del progetto <a href='https://www.h2iosc.cnr.it/' target='_blank'>H2IOSC</a>, in forma assolutamente anonima.</i>
             <br><br>
-            Generative A.I. can be used to accelerate content-creation pipelines for interactive experiences or artificial 3D landscapes users can explore using common web browsers. These virtual experiences can incorporate 3D models, audio-visual elements, and interactive storytelling, integrating multiple A.I. services. In these experiments, we combine several generative A.I. services to generate visual and auditory content, short artificial narratives; automatic translators and text-to-speech services to aurally enrich semantically annotated 3D scenes by Heritage professionals for XR consumption.
+            Generative A.I. can be used to accelerate content-creation pipelines for interactive experiences or artificial 3D landscapes users can explore using common web browsers. These virtual experiences can incorporate 3D models, audio-visual elements, and interactive storytelling, integrating multiple A.I. services. In these experiments, we combine several generative A.I. services to generate visual and auditory content, short artificial narratives; automatic translators and text-to-speech services to aurally enrich semantically annotated 3D scenes by Heritage professionals for XR consumption.<br>
+            <i>Users are advised that motions in the virtual environments will be tracked and analyzed for research purposes within <a href='https://www.h2iosc.cnr.it/' target='_blank'>H2IOSC</a> project, absolutely anonymously.</i>
             </div>
             
             <!-- <div class="introQR"><img src="aton-online-events.png"><br>Rimani aggiornato<br>Calendario eventi online</div>-->
@@ -114,7 +116,7 @@ window.addEventListener("load", ()=>{
 
     <!-- Footer -->
     <div class="atonToolbar atonToolbar-bottom shuFooter">
-    <a href='http://osiris.itabc.cnr.it/aton/' target='_blank'>ATON</a> framework by <a href='https://www.ispc.cnr.it/' target='_blank'>CNR ISPC</a>
+    <b>/imagine</b> by CNR ISPC
     </div>
 
 <!-- 
