--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ let createItem = (sid, title, descr)=>{
     let urlCover = ATON.PATH_RESTAPI+"cover/"+sid;
     let url = ATON.BASE_URL+"/s/"+sid+"?";
     url += "tb=back,vr,qr";
-    url += "&mk.freq=200&mk.dur=600"; //&mk.nav=vr";
+    
+    //url += "&mk.freq=200&mk.dur=600"; //&mk.nav=vr";
 
     let coversizex = 300;
     let coversizey = 350;
