--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 }
 
 .card-exp {
-    height: 300px;
+    height: 250px;
     display: inline-block;
     vertical-align:top;
 }
@@ -115,7 +115,9 @@ window.addEventListener( 'load', ()=>{
         createCard("bfanini/20240213-txy8q9krt", "Ancient Vase 1",""),
         createCard("bfanini/20240213-iewvzrtvm", "Ancient Vase 2",""),
         createCard("bfanini/20250527-swNi6t0pjI", "Ancient Vase 3",""),
-        createCard("smenconero/20241113-tpxfaaj8i", "Barone Rampante","")
+        createCard("smenconero/20241113-tpxfaaj8i", "Barone Rampante",""),
+        createCard("bfanini/20250915-00069yfpl", "Ancient Temple",""),
+        createCard("bfanini/20230929-yj3hs9l24", "Why is DH important?","")
     );
 });
 
@@ -185,7 +187,7 @@ window.addEventListener("load", ()=>{
         <div class="container col-xxl-8 px-3 py-2">
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
                 <div class="col-10 col-sm-8 col-lg-4 align-items-center">
-                    <img src="qr-app.png" class="d-block mx-lg-auto img-fluid" loading="lazy" style="width:100%; height:auto; max-width:500px;">
+                    <img src="qr-app.png" class="d-block mx-lg-auto img-fluid" loading="lazy" style="width:100%; height:auto; max-width:400px;">
                 </div>
 
                 <div class="col-lg-8">
