--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@ window.addEventListener( 'load', ()=>{
         createCard("bfanini/20240213-iewvzrtvm", "Ancient Vase 2",""),
         createCard("bfanini/20250527-swNi6t0pjI", "Ancient Vase 3",""),
         createCard("smenconero/20241113-tpxfaaj8i", "Barone Rampante",""),
+        createCard("bfanini/20250915-eonj1nsh2", "Fantasy Path",""),
         createCard("bfanini/20250915-00069yfpl", "Ancient Temple",""),
         createCard("bfanini/20230929-yj3hs9l24", "Why is DH important?","")
     );
