--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 }
 
 .logos-dark {
-    filter: grayscale(100%) brightness(100.0) !important;
+    filter: grayscale(100%) brightness(100.0);
 }
 </style>
 
@@ -77,7 +77,7 @@ let APP_INSPECT = undefined;
 let bInspect = false;
 let exparams = "";
 
-exparams = "?tb=back,vr,devori,qr";
+exparams = "?tb=back,fs,vr,devori,qr";
 
 // Capture
 exparams += "&mk.hub=https://interlumo.ispc.cnr.it/kapto/&mk.freq=200&mk.attr=nav,pos,dir&mk.dur=600&mk.actor=AFAM25";
